<resources>
    <string name="app_name">Smotty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Beranda</string>
    <string name="nav_transaksi">Detail transaksi</string>
    <string name="nav_akun">Akun Saya</string>
    <string name="nav_bantuan">Bantuan</string>
    <string name="nav_kami">Tentang Kami</string>

    <string name="action_settings">Settings</string>
</resources>
